--- a/configuration/templates/account/auth/approval-body.hbs
+++ b/configuration/templates/account/auth/approval-body.hbs
@@ -1,1 +1,1 @@
-{{#json}}{{{json key="user_id" value=@root.request.params.query.id}}}{{/json}}
+{{#json}}{{{json key="user_id" value=@root.request.params.query.user_id}}}{{/json}}
