--- a/configuration/partials/certificate/pdf.hbs
+++ b/configuration/partials/certificate/pdf.hbs
@@ -1,64 +1,81 @@
 {
   "image": "{{> certificate_logos_saltire}}",
-  "width": 180,
+  "width": 160,
   "alignment": "center",
-  "margin": [0, 0]
+  "margin": [0, 0, 0, 0]
 },
 {
-  "text": {{>pdf_metadata_value key="title" default="VOLUNTEERING FOR 12 TO 25 YEAR OLDS"}},
+  "text": {{>pdf_metadata_value key="title" default="VOLUNTEERING FOR"}},
   "fontSize": 12,
   "bold": true,
   "alignment": "center",
-  "margin": [0, 0]
+  "margin": [0, 5, 0, 0]
+},
+{
+  "text": {{>pdf_metadata_value key="title" default="12 TO 25 YEAR OLDS"}},
+  "fontSize": 12,
+  "bold": true,
+  "alignment": "center",
+  "margin": [0, 0, 0, 0]
 },
 {{#each @root.context.metaData.certificates ~}}
 {{#compare (sumArray (pluck @root.data.tasksInfo "hours_verified")) ">=" hours ~}}
 {{#unless (compare @root.data.verifyHoursInfo.award ">" hours) ~}}
 {
   "columns": [
-    {
-      "width": "45%",
-      "text": {{>pdf_metadata_value key="title" default=(concat certificate_name " hours")}},
-      "color": "{{getProperty @root.context.metaData.theme type}}",
-      "fontSize": 18,
-      "bold": false,
-      "alignment": "center",
-      "margin": [0, 0]
-    },
+    [
+      {
+        "width": "60%",
+        "text": {{>pdf_metadata_value key="title" default=(concat hours " hours")}},
+        "color": "{{getProperty @root.context.metaData.theme type}}",
+        "fontSize": 38,
+        "bold": false,
+        "alignment": "center",
+        "margin": [0, 10, 0, 0]
+      },
+      {
+        "text": {{>pdf_metadata_value key="title" default="VOLUNTEERING"}},
+        "color": "{{@root.context.metaData.theme.secondary}}",
+        "fontSize": 18,
+        "bold": true,
+        "alignment": "center",
+        "margin": [0, 0, 0, 5]
+      },
+      {
+        "text": {{>pdf_metadata_value key="title" default="Congratulations on your achievement of completing"}},
+        "fontSize": 14,
+        "bold": false,
+        "alignment": "center",
+        "margin": [0, 0, 0, 0]
+      },
+      {
+        "text": {{>pdf_metadata_value key="title" default=type_name}},
+        "fontSize": 16,
+        "bold": true,
+        "color": "{{getProperty @root.context.metaData.theme type}}",
+        "alignment": "center",
+        "margin": [0, 0, 0, 0]
+      }
+    ],
     {
       "width": "*",
       "text": ""
-    },
-    {
-      "width": "33%",
-      "color": "{{getProperty @root.context.metaData.theme type}}",
-      "text": "{{hours}} badge"
     }
+    {{!-- [
+      {
+        "width": "140",
+        {{#compare type 'approach' ~}}
+        "image": "{{> certificate_logos_badge_approach}}",
+        {{else}}
+        "image": "{{> certificate_logos_badge_ascent}}",
+        {{/compare ~}}
+        "alignment": "center",
+        "margin": [0, 0, 0, 0]
+      }
+    ] --}}
   ],
   "columnGap": 0,
-  "margin": [0, 0]
-},
-{
-  "text": {{>pdf_metadata_value key="title" default="VOLUNTEERING"}},
-  "fontSize": 14,
-  "bold": false,
-  "alignment": "center",
-  "margin": [0, 0]
-},
-{
-  "text": {{>pdf_metadata_value key="title" default="Congratulations on your achievement of completing"}},
-  "fontSize": 10,
-  "bold": false,
-  "alignment": "center",
-  "margin": [0, 0]
-},
-{
-  "text": {{>pdf_metadata_value key="title" default=type_name}},
-  "fontSize": 14,
-  "bold": true,
-  "color": "{{getProperty @root.context.metaData.theme type}}",
-  "alignment": "center",
-  "margin": [0, 0]
+  "margin": [0, 0, 0, 0]
 },
 {{/unless ~}}
 {{/compare ~}}
@@ -68,7 +85,7 @@
   "fontSize": 16,
   "bold": true,
   "alignment": "center",
-  "margin": [0, 10]
+  "margin": [0, 30, 0, 0]
 },
 {{#each tasks ~}}
 {{#compare ../type "group" ~}}
@@ -77,16 +94,16 @@
   "text": "For: {{organisation_name}}",
   "fontSize": 16,
   "bold": true,
-  "alignment": "center",
-  "margin": [0, 15]
+  "alignment": "left",
+  "margin": [0, 15, 0, 0]
 },
 {{#if task_description ~}}
 {
   "text": "{{task_description}}",
   "fontSize": 16,
   "bold": true,
-  "alignment": "center",
-  "margin": [0, 15]
+  "alignment": "left",
+  "margin": [0, 15, 0, 0]
 },
 {{/if ~}}
 {{#if un_sustainable_development_goals ~}}
@@ -94,8 +111,8 @@
   "text": "{{> sdg_number sdg=un_sustainable_development_goals}}: {{un_sustainable_development_goals}}",
   "fontSize": 16,
   "color": "{{> sdg_color sdg=un_sustainable_development_goals}}",
-  "alignment": "center",
-  "margin": [0, 5]
+  "alignment": "left",
+  "margin": [0, 5, 0, 0]
 },
 {{/if ~}}
 {{/compare ~}}
@@ -104,15 +121,15 @@
 {
   "text": "For: {{organisation_name}}",
   "fontSize": 16,
-  "alignment": "center",
-  "margin": [0, 15]
+  "alignment": "left",
+  "margin": [0, 15, 0, 0]
 },
 {{#if task_description ~}}
 {
   "text": "{{task_description}}",
   "fontSize": 16,
-  "alignment": "center",
-  "margin": [0, 15]
+  "alignment": "left",
+  "margin": [0, 15, 0, 0]
 },
 {{/if ~}}
 {{#if un_sustainable_development_goals ~}}
@@ -120,8 +137,8 @@
   "text": "{{> sdg_number sdg=un_sustainable_development_goals}}: {{un_sustainable_development_goals}}",
   "fontSize": 16,
   "color": "{{> sdg_color sdg=un_sustainable_development_goals}}",
-  "alignment": "center",
-  "margin": [0, 5]
+  "alignment": "left",
+  "margin": [0, 5, 0, 0]
 },
 {{/if ~}}
 {{/compare ~}}
@@ -133,14 +150,14 @@
   "fontSize": 22,
   "bold": true,
   "alignment": "center",
-  "margin": [0, 15]
+  "margin": [0, 15, 0, 0]
 },
 {
   "text": "{{substr user.claim_code 0 10}}",
   "fontSize": 16,
   "bold": true,
   "alignment": "center",
-  "margin": [0, 15]
+  "margin": [0, 15, 0, 0]
 },
 {{/if ~}}
 {
@@ -154,18 +171,18 @@
       "image": "{{> certificate_logos_global_goals}}",
       "alignment": "center",
       "link": "https://globalgoals.org",
-      "margin": [0, 0]
+      "margin": [0, 0, 0, 0]
     },
     {
       "width": 170,
       "image": "{{> certificate_logos_sg}}",
       "alignment": "right",
       "link": "https://gov.scot",
-      "margin": [0, 0]
+      "margin": [0, 0, 0, 0]
     }
   ],
   "columnGap": 10,
-  "margin": [0, 0]
+  "margin": [0, 0, 0, 0]
 },
 {{#if (compare @root.route.name "group_certificate") ~}}
 {{#if last ~}}
