--- a/src/main.scss
+++ b/src/main.scss
@@ -519,11 +519,12 @@ header,
 .saltire-badge {
   position: relative;
   margin-bottom: $unit/2;
+  height: 100px;
   .badge-content {
     position: absolute;
     height: 85px;
     width: 85px;
-    top: 30px;
+    top: 10px;
     left: auto;
     margin-left: .5px;
     display: flex;
