--- a/src/main.scss
+++ b/src/main.scss
@@ -228,6 +228,10 @@ a.btn-link:hover {
   display: block;
   width: 100%;
 
+  .tt-input {
+    width: 100%;
+  }
+
   .tt-menu {
     border: 1px solid rgb(204, 204, 204);
     background-color: rgb(255, 255, 255);
