reformat contact page

--- a/configuration/templates/error/500.hbs
+++ b/configuration/templates/error/500.hbs
@@ -1,12 +1,12 @@
 <div class="empty">
-  <div class="empty-icon">
+  <div class="empty-icon bg-error">
     <span class="fal fa-exclamation-circle fa-3x"></span>
   </div>
   <p class="empty-title h5">Error 500: Something went terribly wrong</p>
   <p class="empty-subtitle">Please try again, but contact us if the problem persists.</p>
   <div class="empty-action">
     <a href="/" class="btn btn-primary">Home</a>
-    <a href="mailto:{{> support_email_address}}" class="btn btn-link">Contact us</a>
+    <a href="mailto:{{> support_email_address}}" class="btn">Contact us</a>
   </div>
   <pre class="code">
     <code>
