Fixed selector to check if term chip should be added

--- a/configuration/partials/opportunity-search-form.hbs
+++ b/configuration/partials/opportunity-search-form.hbs
@@ -268,7 +268,7 @@
       type: "basic",
       name: "exists",
       config: {
-        __template: `\{{{get (jquery (concat "input[type='hidden'][value='" metadata.suggestion.value "']")) "length"}}}`,
+        __template: `\{{{get (jquery (concat ".chip > input[type='hidden'][value='" metadata.suggestion.value "']")) "length"}}}`,
         __parser: 'integer'
       }
     },
