Notes on typeahead bug

--- a/configuration/partials/opportunity-search-form.hbs
+++ b/configuration/partials/opportunity-search-form.hbs
@@ -184,12 +184,10 @@
 
 <script data-task="empty-location-fields" type="javascript/blocked">
   {
-    name: "emptyLocationFields",
     type: "elementManipulator",
     config: {
       "#location-lat": { value: "" },
-      "#location-lng": { value: "" },
-      "#where-opportunities": { value: "" }
+      "#location-lng": { value: "" }
     }
   }
 </script>
