--- a/configuration/templates/error/500.hbs
+++ b/configuration/templates/error/500.hbs
@@ -1,5 +1,5 @@
-<div class="empty">
-  <div class="empty-icon bg-error">
+<div class="empty bg-error">
+  <div class="empty-icon">
     <span class="fal fa-exclamation-circle fa-3x"></span>
   </div>
   <p class="empty-title h5">Error 500: Something went terribly wrong</p>
