--- a/configuration/templates/volunteering/hours.hbs
+++ b/configuration/templates/volunteering/hours.hbs
@@ -109,7 +109,8 @@
                 <strong>
                   {{#compare hours ">" 0 ~}}
                   What have you done and how many hours have you volunteered since the
-                  {{momentFormat (moment (itemAt (map hours_list (getProp "createdDate")) (subtract (length hours_list) 1)) 'YYYY-MM-DDTHH:mm:ssZ') "Do \o\f MMMM"}}{{#compare (momentFormat (moment (itemAt (map hours_list (getProp "createdDate")) (subtract (length hours_list) 1)) 'YYYY-MM-DDTHH:mm:ssZ') "YYYY") "!==" (momentFormat (moment) "YYYY")}} {{momentFormat (moment) "YYYY"}}{{/compare ~}}?
+                  {{momentFormat (moment (itemAt (map hours_list (getProp "createdDate")) 0) 'YYYY-MM-DDTHH:mm:ssZ') "Do \o\f MMMM"}}{{#compare (momentFormat (moment (itemAt (map hours_list (getProp "createdDate")) 0) 'YYYY-MM-DDTHH:mm:ssZ') "YYYY") "!==" (momentFormat (moment) "YYYY")}} {{momentFormat (moment) "YYYY"}}{{/compare ~}}?
+                  {{!-- (subtract (length hours_list) 1) --}}
                   {{else}}
                   What have you done and how many hours have you volunteered since you started?
                   {{/compare ~}}
