--- a/configuration/partials/certificate/content.hbs
+++ b/configuration/partials/certificate/content.hbs
@@ -18,17 +18,28 @@
   "alignment": "center",
   "margin": [0, 0, 0, 0]
 },
-{{#each @root.context.metaData.certificates ~}}
-{{#compare ../award "hours" ~}}
-{{#compare (sumArray (pluck @root.data.tasksInfo "hours_verified")) ">=" hours ~}}
-{{#unless (compare @root.data.verifyHoursInfo.award ">" hours) ~}}
 {
   "columns": [
     [
       {
         "width": "60%",
+        {{#compare award "hours" ~}}
+        {{#each @root.context.metaData.certificates ~}}
+        {{#compare (sumArray (pluck @root.data.tasksInfo "hours_verified")) ">=" hours ~}}
+        {{#unless (compare @root.data.verifyHoursInfo.award ">" hours) ~}}
         "text": {{>pdf_metadata_value key="title" default=(concat hours " hours")}},
         "color": "{{getProperty @root.context.metaData.theme type}}",
+        {{/unless ~}}
+        {{/compare ~}}
+        {{/each ~}}
+        {{else}}
+        {{#each @root.context.metaData.certificates ~}}
+        {{#compare ../award type ~}}
+        "text": {{>pdf_metadata_value key="title" default=certificate_name}},
+        "color": "{{getProperty @root.context.metaData.theme type}}",
+        {{/compare ~}}
+        {{/each ~}}
+        {{/compare ~}}
         "fontSize": 38,
         "bold": false,
         "alignment": "center",
@@ -43,21 +54,46 @@
         "margin": [0, 0, 0, 5]
       },
       {
-        {{#if type_final ~}}
+        {{#compare award "hours" ~}}
+        {{#each @root.context.metaData.certificates ~}}
+        {{#compare (sumArray (pluck @root.data.tasksInfo "hours_verified")) ">=" hours ~}}
+        {{#unless (compare @root.data.verifyHoursInfo.award ">" hours) ~}}
+        {{#unless in_progress ~}}
         "text": {{>pdf_metadata_value key="title" default="Congratulations on your achievement of completing"}},
         {{else}}
         "text": {{>pdf_metadata_value key="title" default="Congratulations on your achievement on"}},
-        {{/if ~}}
+        {{/unless ~}}
+        {{/unless ~}}
+        {{/compare ~}}
+        {{/each ~}}
+        {{else}}
+        "text": {{>pdf_metadata_value key="title" default="Congratulations on your achievement of completing"}},
+        {{/compare ~}}
         "fontSize": 14,
         "bold": false,
         "alignment": "center",
         "margin": [0, 0, 0, 0]
       },
       {
+        {{#compare award "hours" ~}}
+        {{#each @root.context.metaData.certificates ~}}
+        {{#compare (sumArray (pluck @root.data.tasksInfo "hours_verified")) ">=" hours ~}}
+        {{#unless (compare @root.data.verifyHoursInfo.award ">" hours) ~}}
         "text": {{>pdf_metadata_value key="title" default=type_name}},
+        "color": "{{getProperty @root.context.metaData.theme type}}",
+        {{/unless ~}}
+        {{/compare ~}}
+        {{/each ~}}
+        {{else}}
+        {{#each @root.context.metaData.certificates ~}}
+        {{#compare ../award type ~}}
+        "text": {{>pdf_metadata_value key="title" default=type_name}},
+        "color": "{{getProperty @root.context.metaData.theme type}}",
+        {{/compare ~}}
+        {{/each ~}}
+        {{/compare ~}}
         "fontSize": 16,
         "bold": true,
-        "color": "{{getProperty @root.context.metaData.theme type}}",
         "alignment": "center",
         "margin": [0, 0, 0, 0]
       }
@@ -83,12 +119,6 @@
   "columnGap": 0,
   "margin": [0, 0, 0, 0]
 },
-{{/unless ~}}
-{{/compare ~}}
-{{else}}
-{{!-- non-hours based volunteering --}}
-{{/compare ~}}
-{{/each ~}}
 {
   "text": "{{user.first_name}} {{user.last_name}}",
   "fontSize": 16,
