show more info about claimable certificate

--- a/configuration/templates/volunteering/achievements.hbs
+++ b/configuration/templates/volunteering/achievements.hbs
@@ -69,7 +69,7 @@
         {{certificate_name}} hour certificate available! Claiming this certificate will send {{inflect (length @root.data.tasksInfo) "an email" "emails"}} to the {{inflect (length @root.data.tasksInfo) "person" "people"}} managing your volunteering to verify the hours you've logged.
       </p>
       <p class="text-center">
-        <a href="/verify-hours-email-send/?award={{hours}}" class="btn">Claim this certificate</a>
+        <a href="/verify-hours-email-send/?award={{hours}}" class="btn btn-primary btn-success">Claim this certificate</a>
       </p>
     </div>
   </div>
