--- a/src/main.scss
+++ b/src/main.scss
@@ -12,9 +12,9 @@ $bg-color-dark: darken($bg-color, 4%) !default;
 $dark-color: #10183A;
 $gray-color: #333E48;
 $light-color: #FFFFFF;
-$success-color: rgb(0, 96, 0);
-$warning-color: rgb(255, 190, 26);
-$error-color: rgb(255, 96, 3);
+$success-color: #3BAA34;
+$warning-color: #F05B23;
+$error-color: #f03823;
 
 $theme-challenge: #008DDE;
 $theme-approach: #3BAA34;
