--- a/configuration/partials/certificate/content.hbs
+++ b/configuration/partials/certificate/content.hbs
@@ -149,8 +149,8 @@
 },
 {
   "text": "{{user.first_name}} {{user.last_name}}",
-  "fontSize": 16,
-  "bold": true,
+  "fontSize": 20,
+  "bold": false,
   "alignment": "center",
   "margin": [0, 30, 0, 0]
 },
@@ -159,7 +159,7 @@
 {
   "text": "For: {{organisation_name}}",
   "fontSize": 16,
-  "bold": true,
+  "bold": false,
   "alignment": "left",
   "margin": [0, 15, 0, 0]
 },
